# serial2-tokio-rs

./: CHANGELOG  Cargo.toml  LICENSE-APACHE  README.md  README.tpl
.github/workflows/: rust.yml
examples/: serial-cat.rs
src/: lib.rs
src/inner/: unix.rs  windows.rs
tests/: pair.rs
